--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/vidbg.css">
+    <script src="js/vidbg.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>SpaceX</title>
 </head>
@@ -40,5 +42,10 @@
             </ul>
         </nav>
     </header>
+    <section class="main">
+        <h1 class="title">Falcon Heavy</h1>
+        <p class="description">The most powerful operational rocket in the world by a factor of two</p>
+    </section>
+    <div class="video"></div>
 </body>
 </html>
