--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/vidbg.css">
     <script src="js/vidbg.js" defer></script>
+    <script src="js/rellax.min.js" defer></script>
+    <script src="js/main.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>SpaceX</title>
 </head>
+
 <body>
     <header class="header">
         <img class="logo" src="img/logo.svg" alt="Logo Space X">
@@ -47,5 +51,45 @@
         <p class="description">The most powerful operational rocket in the world by a factor of two</p>
     </section>
     <div class="video"></div>
+    <section class="features">
+        <div class="overwiew">
+            <h2 class="features-title">Falcon Heavy <br> Overview</h2>
+
+            <!-- ну и что что таблица. зато я узнал про библиотеку vidbg.js :p -->
+            <table class="table">
+                <tr>
+                    <td class="table-column">HEIGHT</td>
+                    <td class="table-column">70 m / 229.6 ft</td>
+                </tr>
+                <tr>
+                    <td class="table-column">DIAMETR</td>
+                    <td class="table-column">12.2 m / 39.9 ft</td>
+                </tr>
+                <tr>
+                    <td class="table-column">MASS</td>
+                    <td class="table-column">1,420,788 kg / 3,125,735 1b</td>
+                </tr>
+                <tr>
+                    <td class="table-column">PAYLOAD TO LEO</td>
+                    <td class="table-column">63,800 kg / 140,660 1b</td>
+                </tr>
+                <tr>
+                    <td class="table-column">PAYLOAD TO GTO</td>
+                    <td class="table-column">26,700 kg / 58,860 1b</td>
+                </tr>
+                <tr>
+                    <td class="table-column">PAYLOAD TO MARS</td>
+                    <td class="table-column">16,800 kg / 37,040 1b</td>
+                </tr>
+            </table>
+            <img class="rocket" src="img/rocket.png" alt="rocket" data-rellax-speed="7" />
+            <h2 class="features-title">UNMATCHED <br> PERFORMANCE</h2>
+            <p class="features-text">With more than 5 million pounds of thrust at liftoff, Falcon Heavy is the most
+                capable rocket flying. By comparison, the liftoff thrust of the Falcon Heavy equals approximately
+                eighteen 747 aircraft at full power. Falcon Heavy can lift the equivalent of a fully loaded 737
+                jetliner—complete with passengers, luggage and fuel—to orbit.</p>
+        </div>
+    </section>
 </body>
+
 </html>
