--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <td class="table-column">16,800 kg / 37,040 1b</td>
                 </tr>
             </table>
-            <img class="rocket" src="img/rocket.png" alt="rocket" data-rellax-speed="7" />
+            <img class="rocket" src="img/falcon-heavy.png" alt="rocket" data-rellax-speed="8" />
             <h2 class="features-title">UNMATCHED <br> PERFORMANCE</h2>
             <p class="features-text">With more than 5 million pounds of thrust at liftoff, Falcon Heavy is the most
                 capable rocket flying. By comparison, the liftoff thrust of the Falcon Heavy equals approximately
@@ -90,6 +90,23 @@
                 jetliner—complete with passengers, luggage and fuel—to orbit.</p>
         </div>
     </section>
+    <footer class="footer">
+        <img class="logo" src="img/logo.svg" alt="Logo SpaceX">
+        <nav class="footer-nav">
+            <ul class="list">
+                <li class="item"><a href="#" class="item-link">Twitter</a></li>
+                <li class="item"><a href="#" class="item-link">Youtube</a></li>
+                <li class="item"><a href="#" class="item-link">Instagram</a></li>
+                <li class="item"><a href="#" class="item-link">Flickr</a></li>
+                <li class="item"><a href="#" class="item-link">LinledIn</a></li>
+                <li class="item"><a href="#" class="item-link">Privacy</a></li>
+                <li class="item"><a href="#" class="item-link">Policy</a></li>
+            </ul>
+        </nav>
+        <p class="footer-text">for additional questions, contact <a class="footer-link"
+                href="mailto:rideshare@spacex.com">rideshare@spacex.com</a></p>
+        <a href="#" class="button">Conact us</a>
+    </footer>
 </body>
 
 </html>
