--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <script src="js/aos.js" defer></script>
     <script src="js/main.js" defer></script>
 
+    <!-- favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon//favicon-16x16.png">
+    <link rel="manifest" href="img/favicon//site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <!-- / favicons -->
+
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>SpaceX</title>
 </head>
@@ -93,9 +102,9 @@
                 jetliner—complete with passengers, luggage and fuel—to orbit.</p>
         </div>
     </section>
-    <footer class="footer" data-aos="fade-up">
-        <img class="logo" src="img/logo.svg" alt="Logo SpaceX">
-        <nav class="footer-nav">
+    <footer class="footer" >
+        <img class="logo" src="img/logo.svg" alt="Logo SpaceX" data-aos="fade-up">
+        <nav class="footer-nav" data-aos="fade-up">
             <ul class="list">
                 <li class="item"><a href="#" class="item-link">Twitter</a></li>
                 <li class="item"><a href="#" class="item-link">Youtube</a></li>
@@ -106,7 +115,7 @@
                 <li class="item"><a href="#" class="item-link">Policy</a></li>
             </ul>
         </nav>
-        <p class="footer-text">for additional questions, contact <a class="footer-link"
+        <p class="footer-text" data-aos="fade-up">for additional questions, contact <a class="footer-link"
                 href="mailto:rideshare@spacex.com">rideshare@spacex.com</a></p>
         <a href="#" class="button">Conact us</a>
     </footer>
